# nix-flakes

./: README.md  flake.nix
ansible/: flake.nix  pyproject.toml
kubernetes/: flake.nix
opentofu/: flake.nix
terraform/: flake.nix
